--- a/app/src/main/res/navigation/navgraph.xml
+++ b/app/src/main/res/navigation/navgraph.xml
@@ -23,12 +23,21 @@
         <action
             android:id="@+id/action_firstFragment_to_oneDialogFragment"
             app:destination="@id/oneDialogFragment" />
+        <action
+            android:id="@+id/action_firstFragment_to_bottomSheetDialogFragment"
+            app:destination="@id/bottomSheetDialogFragment" />
     </fragment>
+
     <dialog
         android:id="@+id/oneDialogFragment"
         tools:layout="@layout/dialog_fragment_one"
         android:name="com.explore.navgraphdemo.OneDialogFragment"
         android:label="OneDialogFragment" />
 
+    <dialog
+        android:id="@+id/bottomSheetDialogFragment"
+        tools:layout="@layout/dialog_bottom_sheet_fragment"
+        android:name="com.explore.navgraphdemo.DetailBottomSheetFragment"
+        android:label="OneDialogFragment" />
 
 </navigation>
