--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -27,6 +27,7 @@
     <!-- card details -->
     <dimen name="card_elevation">3dp</dimen>
     <dimen name="card_corner_radius">10dp</dimen>
+    <dimen name="bottom_sheet_card_corner_radius">5dp</dimen>
     <dimen name="image_corner_radius">6dp</dimen>
     <dimen name="avatar_small">80dp</dimen>
     <dimen name="avatar_medium">120dp</dimen>
