fix: renamed design file

--- a/app/src/main/res/navigation/navgraph.xml
+++ b/app/src/main/res/navigation/navgraph.xml
@@ -30,7 +30,7 @@
 
     <dialog
         android:id="@+id/oneDialogFragment"
-        tools:layout="@layout/dialog_fragment_one"
+        tools:layout="@layout/dialog_fragment"
         android:name="com.explore.navgraphdemo.OneDialogFragment"
         android:label="OneDialogFragment" />
 
